[FIX] CSS overflow

--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,7 @@ p {
   font-style: normal;
   line-height: normal;
 }
+
+* {
+  box-sizing: border-box; /* padding 포함해서 width 유지 */
+}
