--- a/src/pages/create-challenge/CreateChallenge.module.css
+++ b/src/pages/create-challenge/CreateChallenge.module.css
@@ -1,3 +1,7 @@
 .createChallenge {
-  margin: 26px 20px;
+  width: 100%;
+}
+
+.container {
+  padding: 0 20px;
 }
